# git-rusty

./: Cargo.toml  readme.md
docs/: architecture.md  blob.md  clone.md  tree.md
src/: config.rs  error.rs  init.rs  main.rs  object.rs  run.rs
src/commands/: cat_file.rs  clone.rs  commit_tree.rs  hash_object.rs  ls_tree.rs  mod.rs  write_tree.rs
src/object/: blob.rs  mod.rs  tree.rs
tests/: commit_tree_test.rs  write_tree.rs  write_tree_test.rs
