[package]
name = "git-rusty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.37", features = ["derive"] }
flate2 = "1.0.34"                                # compression
hex = "0.4.3"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
